--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
-h1 {
-    color: yellowgreen;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
