--- a/components/Navbar/navbar-styles.css
+++ b/components/Navbar/navbar-styles.css
@@ -43,25 +43,6 @@
     background-color: #eff3f6;
 }
 
-
-/* Button */
-.roundbtn {
-    padding: 0.7rem;
-    border-radius: 25px;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    background-color: white;
-}
-
-.roundbtn:hover {
-    background-color: #eff3f6;
-}
-
-.roundbtn:disabled {
-    opacity: 0.1;
-}
-
 /* Input Field */
 
 .search-input {
@@ -84,4 +65,98 @@
 .search-input:focus {
     background-color: white;
     outline: none;
+}
+
+
+/* //Navmenu CSS */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+
+.nav {
+  position: fixed;
+  left: -2em;
+  z-index: 1000;
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+
+.icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 990;
+  height: 100%;
+}
+
+.icon li {
+  list-style-type: none;
+}
+.icon a {
+  display: block;
+  width: 64px;
+  height: 64px;
+  line-height: 64px;
+  text-align: center;
+  font-size: 1.6em;
+  color: #999999;
+}
+
+.icon a:hover {
+  background-color: #eff3f6;
+ }
+
+.nav:hover .text{
+  transform: rotateY(0deg);
+}
+
+.nav:hover .text,.togglemenu{
+  transform: rotateY(0deg);
+}
+
+.text {
+  position: absolute; 
+   left: 63px;
+  box-sizing: border-box;
+  top: 0;
+  z-index: 980;
+  height: 100%;
+  transition: transform 0.24s linear;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  transform-origin: left;
+  transform: perspective(1000px) rotateY(90deg);
+}
+
+.noteshover,.trashhover,.editlabelshover,.archiveshover,.tnoteshover,.ttrashhover,.teditlabelshover,.tarchiveshover {
+  background-color:#eff3f6;
+}
+
+.text li {
+  width: 100%;
+}
+
+.text a {
+  display: block;
+  width: 200px;
+  height: 64px;
+  line-height: 64px;
+  text-indent: 1em;
+  font-size: 1.4em;
+  text-decoration: none;
+  color: black;
+}
+
+
+.text a:hover {
+  color: black;
+  transform: translateX(-14px);
+  transition: transform 0.30s linear;
+  background-color: #eff3f6;
+}
+
+
+@media screen and (max-width: 450px) {
+  h1 {
+    font-size: 7.5vw;
+  }
 }
