--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./navbar-styles.css">
-    <link rel="stylesheet" href="./navmenu.css">
+    <!-- <link rel="stylesheet" href="./navbar-styles.css">
+    <link rel="stylesheet" href="../../additional css/roundbutton-styles.css"> -->
 </head>
 <body>
   <nav>
