--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -28,18 +28,18 @@
       <div id="navmenu" class="nav">
           <div class="icon">
             <ul>
-              <li><a class="notes" id="0" href="Notes"><img src="../../svg/notesicon.svg" alt="notes"></a></li>
-              <li><a class="editlabels" id="1" href="Edit Labels"><img src="../../svg/editlabels.svg" alt="notes"></a></li>
-              <li><a class="archives" id="2" href="Archive"><img src="../../svg/archives.svg" alt="notes"></a></li>
-              <li><a class="trash" id="3" href="Trash"><img src="../../svg/trash.svg" alt="notes"></a></li>
+              <li><a class="notes" id="0" href="../../pages/noteshomepage/noteshomepage.html"><img src="../../svg/notesicon.svg" alt="notes"></a></li>
+              <li><a class="editlabels" id="1" href="../../pages/Editlabelspage/editlabelspage.html"><img src="../../svg/editlabels.svg" alt="notes"></a></li>
+              <li><a class="archives" id="2" href="../../pages/archivespage/archivespage.html"><img src="../../svg/archives.svg" alt="notes"></a></li>
+              <li><a class="trash" id="3" href="../../pages/trashpage/trashpage.html"><img src="../../svg/trash.svg" alt="notes"></a></li>
             </ul>
           </div>
           <div class="text">
             <ul style="list-style-type: none;">
-              <li><a class="tnotes" id="4"  href="#">Notes</a></li>
-              <li><a class="teditlabels" id="5" href="#" >Edit Labels</a></li>
-              <li><a class="tarchives" id="6" href="#" >Archive</a></li>
-              <li><a class="ttrash" id="7" href="#" >Trash</a></li>
+              <li><a class="tnotes" id="4"  href="../../pages/noteshomepage/noteshomepage.html">Notes</a></li>
+              <li><a class="teditlabels" id="5" href="../../pages/Editlabelspage/editlabelspage.html" >Edit Labels</a></li>
+              <li><a class="tarchives" id="6" href="../../pages/archivespage/archivespage.html" >Archive</a></li>
+              <li><a class="ttrash" id="7" href="../../pages/trashpage/trashpage.html" >Trash</a></li>
             </ul>
           </div>
         </div>
