--- a/components/Notedisplay/notedisplay.html
+++ b/components/Notedisplay/notedisplay.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../../additional css/roundbutton-styles.css"> -->
 </head>
 <body>
-        <div class="othernotes" style="display:flex;flex-direction:column;row-gap:10px;align-items: center">
-           Other Notes
+        <div class="notesdiv" style="display:flex;flex-direction:column;row-gap:10px;align-items: center">
+
         </div>
       <script src="./notedisplay-script.js"></script>
 </body>
