--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -37,7 +37,7 @@
           <div class="text">
             <ul style="list-style-type: none;">
               <li><a class="tnotes" id="4"  href="../../pages/noteshomepage/noteshomepage.html">Notes</a></li>
-              <li><a class="teditlabels" id="5" href="../../pages/Editlabelspage/editlabelspage.html" >Edit Labels</a></li>
+              <li><a class="teditlabels" id="5" href="../../pages/Editlabelspage/editlabelspage.html" >Edit Lables</a></li>
               <li><a class="tarchives" id="6" href="../../pages/archivespage/archivespage.html" >Archive</a></li>
               <li><a class="ttrash" id="7" href="../../pages/trashpage/trashpage.html" >Trash</a></li>
             </ul>
