--- a/components/Notedisplay/notedisplay.html
+++ b/components/Notedisplay/notedisplay.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../../components/Notedisplay/notedisplay-styles.css">
     <link rel="stylesheet" href="../../additional css/roundbutton-styles.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 </head>
 <body>
         <div class="notesdiv" style="display:flex;flex-direction:column;row-gap:10px;align-items: center">
 
         </div>
+        
       <script src="./notedisplay-script.js"></script>
 </body>
 </html>
