--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -28,18 +28,18 @@
       <div id="navmenu" class="nav">
           <div class="icon">
             <ul>
-              <li><a class="notes" id="0" href="../../pages/noteshomepage/noteshomepage.html"><img src="../../svg/notesicon.svg" alt="notes"></a></li>
-              <li><a class="editlabels" id="1" href="../../pages/Editlabelspage/editlabelspage.html"><img src="../../svg/editlabels.svg" alt="notes"></a></li>
-              <li><a class="archives" id="2" href="../../pages/archivespage/archivespage.html"><img src="../../svg/archives.svg" alt="notes"></a></li>
-              <li><a class="trash" id="3" href="../../pages/trashpage/trashpage.html"><img src="../../svg/trash.svg" alt="notes"></a></li>
+              <li><a class="notes iconli" id="0" onclick="navmenulinkclicked(this)" href="#"  data-href="../../pages/noteshomepage/noteshomepage.html"><img src="../../svg/notesicon.svg" alt="notes"></a></li>
+              <li><a class="editlabels iconli" id="1" onclick="navmenulinkclicked(this)" href="#"  data-href="../../pages/Editlabelspage/editlabelspage.html"><img src="../../svg/editlabels.svg" alt="notes"></a></li>
+              <li><a class="archives iconli" id="2" onclick="navmenulinkclicked(this)" href="#"  data-href="../../pages/archivespage/archivespage.html"><img src="../../svg/archives.svg" alt="notes"></a></li>
+              <li><a class="trash iconli" id="3" onclick="navmenulinkclicked(this)" href="#"  data-href="../../pages/trashpage/trashpage.html"><img src="../../svg/trash.svg" alt="notes"></a></li>
             </ul>
           </div>
           <div class="text">
             <ul style="list-style-type: none;">
-              <li><a class="tnotes" id="4"  href="../../pages/noteshomepage/noteshomepage.html">Notes</a></li>
-              <li><a class="teditlabels" id="5" href="../../pages/Editlabelspage/editlabelspage.html" >Edit Lables</a></li>
-              <li><a class="tarchives" id="6" href="../../pages/archivespage/archivespage.html" >Archive</a></li>
-              <li><a class="ttrash" id="7" href="../../pages/trashpage/trashpage.html" >Trash</a></li>
+              <li><a class="t-notes textli" id="54" onclick="navmenulinkclicked(this)" href="#"  data-href="../../pages/noteshomepage/noteshomepage.html">Notes</a></li>
+              <li><a class="t-editlabels textli" id="55" onclick="navmenulinkclicked(this)" href="#" data-href="../../pages/Editlabelspage/editlabelspage.html" >Edit Lables</a></li>
+              <li><a class="t-archives textli" id="56" onclick="navmenulinkclicked(this)" href="#" data-href="../../pages/archivespage/archivespage.html" >Archive</a></li>
+              <li><a class="t-trash textli" id="57" onclick="navmenulinkclicked(this)" href="#" data-href="../../pages/trashpage/trashpage.html" >Trash</a></li>
             </ul>
           </div>
         </div>
