--- a/components/Noaccountnavbar/noaccountnavbar.html
+++ b/components/Noaccountnavbar/noaccountnavbar.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="../../additional css/roundbutton-styles.css"> -->
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar noaccountnavbarmain">
         <div class="navleft">
-          <a href="./index.html"><img width="40px" height="40px" src="../../svg/googlelogo.svg" alt="googlelogo"/></a> 
+          <a href="/index.html"><img width="40px" height="40px" src="../../svg/googlelogo.svg" alt="googlelogo"/></a> 
         </div>
          <div class="navcentrehome">
-          <a href="./index.html"><img width="35px" height="35px" src="../../images/keep.png" alt="keeplogo"/></a>
-          <a href="./index.html"><h3 style="margin:0;color:#5f6368;opacity:1;font-weight:400">Google Keep</h3></a>
+          <a href="/index.html"><img width="35px" height="35px" src="../../images/keep.png" alt="keeplogo"/></a>
+          <a href="/index.html"><h3 style="margin:0;color:#5f6368;opacity:1;font-weight:400">Google Keep</h3></a>
         </div> 
         <div class="navright">
-          <button class='roundbtn home-btn'><h3 style="text-decoration:underline;margin:0;color:#5f6368;opacity:1;font-weight:400">Home</h3></button>
+          <button class='roundbtn home-btn'><h3 style="margin:0;color:#5f6368;opacity:1;font-weight:400">Home</h3></button>
           <button class='roundbtn login-btn'><h3 style="margin:0;color:#5f6368;opacity:1;font-weight:400">Login</h3></button>
           <button class='roundbtn signup-btn'><h3 style="margin:0;color:#5f6368;opacity:1;font-weight:400">Signup</h3></button>
         </div>
