--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../additional css/roundbutton-styles.css"> -->
 </head>
 <body>
+  <div>
   <nav>
     <div class="navbar">
         <div class="navleft">
@@ -19,8 +20,9 @@
           <input class='search-input' onchange="searchfunc(this)" onkeyup="searchfunc(this)" type="search" placeholder="Search" value="">
         </div>
         <div class="navright">
-          <button class='roundbtn' onclick="reloadpage()"><img src="../../svg/refreshicon.svg" alt="refresh"></button>
-            <button class='roundbtn'><img src="../../svg/settings.svg" alt="settings"></button>
+          <button class='roundbtn' title="Refresh Page" onclick="reloadpage()"><img src="../../svg/refreshicon.svg" alt="refresh"></button>
+          <button class='roundbtn useraccount' style="padding: 0;"><img width="30" height="30" src="../../svg/user.svg" alt="logout"></button>
+            <button class='roundbtn logoutbtn' title="Logout" style="padding: 0;"><img width="30" height="30" src="../../images/logoutman.png" alt="logout"></button>
         </div>
     </div>
     </nav>
@@ -44,6 +46,7 @@
           </div>
         </div>
     </aside>
+  </div>
     <script src="./navbar-script.js"></script>
 </body>
 </html>
