--- a/components/Notedisplay/notedisplay.html
+++ b/components/Notedisplay/notedisplay.html
@@ -12,6 +12,7 @@
         <div class="notesdiv" style="display:flex;flex-direction:column;row-gap:10px;align-items: center">
 
         </div>
+        <div class="spacerdiv" style="height: 60px;"></div>
         
       <script src="./notedisplay-script.js"></script>
 </body>
