--- a/components/navbar/navbar.html
+++ b/components/navbar/navbar.html
@@ -21,7 +21,9 @@
         </div>
         <div class="navright">
           <button class='roundbtn' title="Refresh Page" onclick="reloadpage()"><img src="../../svg/refreshicon.svg" alt="refresh"></button>
-          <button class='roundbtn useraccount' style="padding: 0;"><img width="30" height="30" src="../../svg/user.svg" alt="logout"></button>
+          <button class='roundbtn useraccount' style="padding: 0;position: relative;"><img width="30" height="30" src="../../svg/user.svg" alt="useraccount">
+            <div class="userdescription" style="display: none"></div>
+          </button>
             <button class='roundbtn logoutbtn' title="Logout" style="padding: 0;"><img width="30" height="30" src="../../images/logoutman.png" alt="logout"></button>
         </div>
     </div>
