--- a/components/Navbar/navbar.html
+++ b/components/Navbar/navbar.html
@@ -20,7 +20,7 @@
           <input class='search-input' onchange="searchfunc(this)" onkeyup="searchfunc(this)" type="search" placeholder="Search" value="">
         </div>
         <div class="navright">
-          <button class='roundbtn' title="Refresh Page" onclick="reloadpage()"><img src="../../svg/refreshicon.svg" alt="refresh"></button>
+          <button class='roundbtn' title="Reload Page" onclick="reloadpage()"><img src="../../svg/refreshicon.svg" alt="refresh"></button>
           <button class='roundbtn useraccount' style="padding: 0;position: relative;"><img width="30" height="30" src="../../svg/user.svg" alt="useraccount">
             <div class="userdescription" style="display: none"></div>
           </button>
